namespace/media/unmanic/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unmanic
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: unmanic
  template:
    metadata:
      labels:
        app: unmanic
    spec:
      containers:
        - name: unmanic
          image: docker.io/josh5/unmanic:latest
          ports:
            - containerPort: 8888
              protocol: TCP
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
              gpu.intel.com/i915: "1"
            limits:
              cpu: "500m"
              memory: "1Gi"
              gpu.intel.com/i915: "1"
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /library
              subPath: media
            - name: temp
              mountPath: /tmp/unmanic
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: unmanic-config
        - name: media
          persistentVolumeClaim:
            claimName: media
        - name: temp
          persistentVolumeClaim:
            claimName: unmanic-temp
