namespace/media/unmanic/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: unmanic
  namespace: media
spec:
  selector:
    app: unmanic
  ports:
    - port: 8888
      targetPort: 8888
      protocol: TCP
      name: unmanic
  type: ClusterIP
