namespace/media/unmanic/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: unmanic-https
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`unmanic.oglesby.io`)
      kind: Rule
      services:
        - name: unmanic-ui
          port: 8888
  tls: 
    secretName: oglesby-io-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: unmanic-http
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`unmanic.oglesby.io`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
          namespace: traefik
      services:
        - name: unmanic-ui
          port: 8888
